--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,16 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
  
+	<properties>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+	 <repositories>
+	    <repository>
+	        <id>my-repo1</id>
+	        <url> http://artifactorypg.paytm.in/artifactory/libs-release </url>
+	    </repository>
+	</repositories>
 	
     <dependencies>
 	    <!-- J UNIT -->
@@ -67,14 +77,31 @@
 	        <artifactId>slf4j-log4j12</artifactId>
 	        <version>1.5.2</version>
     	</dependency>
+    	
+    	<dependency>
+	        <groupId>org.projectlombok</groupId>
+	        <artifactId>lombok</artifactId>
+	        <version>1.18.2</version>
+	        <scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.1</version>
+		    <scope>provided</scope>
+		</dependency>
+
+   		
+   		<dependency>
+		    <groupId>org.apache.tomcat</groupId>
+		    <artifactId>tomcat</artifactId>
+		    <version>9.0.0.M1</version>
+		    <type>pom</type>
+		</dependency>
+   		
   </dependencies>
-  
-	 <repositories>
-	    <repository>
-	        <id>my-repo1</id>
-	        <url> http://artifactorypg.paytm.in/artifactory/libs-release </url>
-	    </repository>
-	</repositories>
+
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
@@ -85,6 +112,7 @@
         </excludes>
       </resource>
     </resources>
+    
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -101,6 +129,52 @@
           <warSourceDirectory>WebContent</warSourceDirectory>
         </configuration>
       </plugin>
+      
+     <plugin>
+	    <groupId>org.apache.tomcat.maven</groupId>
+	    <artifactId>tomcat7-maven-plugin</artifactId>
+	    <version>2.2</version>
+	    <configuration>
+	        <url>http://localhost:8080/manager/text</url>
+	        <server>TomcatServer</server>
+	        <path>/myapp</path>
+	    </configuration>
+	</plugin>
+	
+	 <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.4</version>
+            <executions>
+                <execution>
+                    <id>copy-dependencies</id>
+                    <phase>package</phase>
+                    <goals><goal>copy-dependencies</goal></goals>
+                </execution>
+            </executions>
+       </plugin>
+	
+	
+	<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals><goal>copy</goal></goals>
+                    <configuration>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>com.heroku</groupId>
+                                <artifactId>webapp-runner</artifactId>
+                                <version>9.0.30.0</version>
+                                <destFileName>webapp-runner.jar</destFileName>
+                            </artifactItem>
+                        </artifactItems>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
   </build>
 </project>
