--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,9 @@
         <!-- JSTL -->
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
         </dependency>
 
 
@@ -115,15 +116,7 @@
             <version>3.15.0-GA</version>
         </dependency>
 
-        <!-- Commonsio -->
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.6</version>
-        </dependency>
-
     </dependencies>
-
     <build>
         <sourceDirectory>src</sourceDirectory>
         <resources>
